very small styling changes and homepage change in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://bcruise.github.io/React-Portfolio",
+  "homepage": "http://bcruise.github.io/PortfolioSite",
   "name": "portfoliositereact",
   "version": "0.1.0",
   "private": true,
