--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "emailjs": "^4.0.1",
     "gh-pages": "^5.0.0",
     "jquery": "^3.6.3",
     "react": "^18.2.0",
